feat: loading text center css

--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,13 @@
     grid-auto-rows: 8em;
   }
 }
+
+.loader__text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  font-size: 3rem;
+  font-family: "Roboto", sans-serif;
+}
